xldeploy maven plugin toegevoegd. xld host en password gecorrigeerd.

--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,65 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>nl.rabobank.pipeline</groupId>
-  <artifactId>petclinic</artifactId>
-  <packaging>war</packaging>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>petclinic Maven Webapp</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-  <build>
-    <finalName>petclinic</finalName>
-  </build>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>nl.rabobank.pipeline</groupId>
+	<artifactId>petclinic</artifactId>
+	<packaging>war</packaging>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>petclinic Maven Webapp</name>
+	<url>http://maven.apache.org</url>
+	<build>
+		<finalName>petclinic</finalName>
+		<plugins>
+			<plugin>
+				<groupId>com.xebialabs.xldeploy</groupId>
+				<artifactId>xldeploy-maven-plugin</artifactId>
+				<version>5.1.0</version>
+				<configuration>
+					<environmentId>Environments/hdw/t/WAAACrud.war</environmentId>
+					<applicationName>petclinic.war</applicationName>
+					<generateDeployedOnUpgrade>true</generateDeployedOnUpgrade>
+					<serverAddress>xld-service</serverAddress>
+					<secured>false</secured>
+					<port>4516</port>
+					<username>admin</username>
+                    <password>password</password>
+					<deployables>
+						<tomcat.War name="petclinic.war" groupId="nl.rabobank.pipeline" artifactId="petclinic">
+							<contextRoot>petclinic</contextRoot>
+						</tomcat.War>
+					</deployables>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
+		</dependency>
+		 <dependency>
+            <groupId>nl.rabobank.pipeline</groupId>
+            <artifactId>petclinic</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
+	</dependencies>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>xebialabs-maven2</id>
+			<url>https://dist.xebialabs.com/public/maven2/</url>
+		</pluginRepository>
+		<pluginRepository>
+			<id>knopflerfish</id>
+			<url>http://www.knopflerfish.org/maven2</url>
+		</pluginRepository>
+	</pluginRepositories>
 </project>
